# empathy

./: NEWS  README  configure.ac  empathy.doap
data/: .gitignore  Makefile.am  Template.html  empathy.appdata.xml.in  empathy.css  org.gnome.Empathy.appdata.xml.in  org.gnome.Empathy.desktop.in.in  org.gnome.Empathy.gschema.xml
data/themes/: Makefile.am
data/themes/Classic.AdiumMessageStyle/Contents/Resources/: Content.html  main.css
extensions/: Makefile.am
help/: Makefile.am
libempathy/: empathy-tls-verifier.c  empathy-tls-verifier.h  empathy-tp-chat.c  empathy-utils.c  empathy-utils.h
libempathy-gtk/: empathy-avatar-image.c  empathy-call-utils.c  empathy-cell-renderer-text.c  empathy-chat.c  empathy-contact-chooser.c  empathy-contact-search-dialog.c  empathy-geoclue-helper.c  empathy-individual-dialogs.c  empathy-individual-menu.c  empathy-individual-view.c  empathy-individual-widget.c  empathy-location-manager.c  empathy-log-window.c  empathy-new-message-dialog.c  empathy-roster-contact.c  empathy-roster-contact.h  empathy-roster-view.c  empathy-search-bar.c  empathy-search-bar.ui  empathy-subscription-dialog.c  empathy-theme-adium.c  empathy-theme-adium.h  empathy-tls-dialog.c  empathy-ui-utils.c  empathy-webkit-utils.c  empathy-webkit-utils.h
po/: LINGUAS  POTFILES.in  POTFILES.skip  as.po  az.po  be.po  be@latin.po  bn.po  bn_IN.po  br.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  gu.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  km.po  ko.po  (+29 more)
(+48 files in other folders)
