themesdir = $(datadir)/adium/message-styles

nobase_dist_themes_DATA = \
	Boxes.AdiumMessageStyle/Contents/Resources/Incoming/Content.html \
	Boxes.AdiumMessageStyle/Contents/Resources/Incoming/NextContent.html \
	Boxes.AdiumMessageStyle/Contents/Resources/main.css \
	Boxes.AdiumMessageStyle/Contents/Resources/Status.html \
	Boxes.AdiumMessageStyle/Contents/Resources/Variants/Clean.css \
	Boxes.AdiumMessageStyle/Contents/Resources/Variants/Simple.css \
	Boxes.AdiumMessageStyle/Contents/Resources/Variants/Blue.css \
	Boxes.AdiumMessageStyle/Contents/Info.plist \
	Classic.AdiumMessageStyle/Contents/Resources/Content.html \
	Classic.AdiumMessageStyle/Contents/Resources/main.css \
	Classic.AdiumMessageStyle/Contents/Resources/Status.html \
	Classic.AdiumMessageStyle/Contents/Info.plist \
	PlanetGNOME.AdiumMessageStyle/Contents/Resources/Images/corners.png \
	PlanetGNOME.AdiumMessageStyle/Contents/Resources/Images/horizontal.png \
	PlanetGNOME.AdiumMessageStyle/Contents/Resources/Images/nipple.png \
	PlanetGNOME.AdiumMessageStyle/Contents/Resources/Images/vertical.png \
	PlanetGNOME.AdiumMessageStyle/Contents/Resources/Incoming/Content.html \
	PlanetGNOME.AdiumMessageStyle/Contents/Resources/Incoming/NextContent.html \
	PlanetGNOME.AdiumMessageStyle/Contents/Resources/Status.html \
	PlanetGNOME.AdiumMessageStyle/Contents/Resources/main.css \
	PlanetGNOME.AdiumMessageStyle/Contents/Info.plist \
	$(NULL)
